--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>L'evolution de L'U.X</section>
+				<section>L'évolution de L'U.X</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
